--- a/squirrel/templates/squirrel/all.html
+++ b/squirrel/templates/squirrel/all.html
@@ -21,7 +21,7 @@
               </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  
+                 <a class="btn btn-sm btn-outline-secondary" href="{% url 'squirrel:detail' squi.id %}">Edit</a> 
                 </div>
               </div>
             </div>
