--- a/squirrel/templates/squirrel/add.html
+++ b/squirrel/templates/squirrel/add.html
@@ -18,7 +18,7 @@
               <p class="card-text">
                 <form  method="post">
                         {% csrf_token %}
-                        {{ form.as_ul }}
+                        {{ form.as_p }}
                         <input type="submit" value="Save">
                 </form>
               </p>
