--- a/squirrel/templates/squirrel/add.html
+++ b/squirrel/templates/squirrel/add.html
@@ -18,8 +18,8 @@
               <p class="card-text">
                 <form  method="post">
                         {% csrf_token %}
-                        {{ form.as_p }}
-                        <input type="submit" value="Save">
+                        {{ form }}
+                        <input type="submit" value="Submit">
                 </form>
               </p>
             </div>
