changed the templates

--- a/squirrel/templates/squirrel/stats.html
+++ b/squirrel/templates/squirrel/stats.html
@@ -4,10 +4,9 @@
         .header {
             padding: 60px;
             text-align: center;
-            font-size: 200px;
-
-        h1 { color:'black'; font-size: 150px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;>
-        </style>
+	    font-size: 200px;}
+	h1 { color:'black'; font-size: 150px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;}
+	</style>
     </head>
     <body>
         <header class='header'>
